i updated the writeup on the image

--- a/index.html
+++ b/index.html
@@ -83,17 +83,17 @@
             <div class="box5one">
                 <div class="img2 prop">
                     <div class="box6">
-                        <span> past & current seasons</span>
-                        <h3>TV Shows</h3>
+                        <span>New and classic </span>
+                        <h3>movies</h3>
                     </div>
                 </div>
             </div>
-
+            
             <div class="box5one">
                 <div class="img3 prop">
                     <div class="box6">
-                        <span> past & current seasons</span>
-                        <h3>TV Shows</h3>
+                        <span>Groundbreaking</span>
+                        <h3> Hulu Originals</h3>
                     </div>
                 </div>
             </div>
@@ -101,8 +101,8 @@
             <div class="box5one">
                 <div class="img4 prop">
                     <div class="box6">
-                        <span> past & current seasons</span>
-                        <h3>TV Shows</h3>
+                        <span>Add-on</span>
+                        <h3>Premiums</h3>
                     </div>
                 </div>
             </div>
