card now responsive

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,15 +10,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/a2ee455db1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <section id="Fsec">
         <nav class="nav2">
             <div><img src="images/hulu-logo.svg" alt="" /></div>
             <div>
                 <a href="" class="login"><span>LOG IN</span></a>
-                <div class="burga1"><a href="" class="burga" >
-                <img width="30px" height="20px" src="images/handburger_2.svg" alt="">
-                </a></div>
+                <div class="burga1"><a href="" class="burga">
+                        <img width="30px" height="20px" src="images/handburger_2.svg" alt="">
+                    </a></div>
 
             </div>
         </nav>
@@ -49,10 +51,11 @@
             <div class="signup">
 
                 <button class="terms_apply">Terms apply</button>
-                <div><a href="" title="Sign up for Hulu only" >SIGN UP FOR HULU ONLY</a></div>
-                <div  class="view_more_plan">
-                    <div class="view_more" ><strong>VIEW MORE PLANS</strong></div> <br>
-                    <button><img  width="25px" height="20px" src="https://www.hulu.com/static/hitch/static/icons/arrow_down.svg" alt=""></button>
+                <div><a href="" title="Sign up for Hulu only">SIGN UP FOR HULU ONLY</a></div>
+                <div class="view_more_plan">
+                    <div class="view_more"><strong>VIEW MORE PLANS</strong></div> <br>
+                    <button><img width="25px" height="20px"
+                            src="https://www.hulu.com/static/hitch/static/icons/arrow_down.svg" alt=""></button>
 
                 </div>
             </div>
@@ -70,46 +73,43 @@
                 kids shows, and more.
             </p>
         </div>
-        <div class="box5">
-            <div class="box5one">
-                <div class="img1 prop">
-                    <div class="box6">
-                        <span> past & current seasons</span>
-                        <h3>TV Shows</h3>
-                    </div>
+        <div class="card__container">
+            <div class="card one">
+                <div class="card__text">
+                    <small>past & current seasons</small>
+                    <p>TV Shows</p>
                 </div>
+                <img src="/images/tvshows1.png" alt="" width="100%" height="100%">
+            </div>
+            <div class="card two">
+                <div class="card__text">
+                    <small>New & classic </small>
+                    <p>Movies</p>
+                </div>
+                <img src="/images/movies2.png" alt="" width="100%" height="100%">
+            </div>
+            <div class="card three">
+                <div class="card__text">
+                    <small>Groundbreaking </small>
+                    <p> Hulu Originals</p>
+                </div>
+                <img src="/images/huluoriginal2.png" alt="" width="100%" height="100%">
+            </div>
+            <div class="card four">
+                <div class="card__text">
+                    <small>Add-on </small>
+                    <p>Premiums</p>
+                </div>
+                <img src="/images/addonpremiums1.png" alt="" width="100%" height="100%">
+            </div>
+            <div class="premium">
+                <small>Premium network add-ons available for an additional cost</small>
             </div>
 
-            <div class="box5one">
-                <div class="img2 prop">
-                    <div class="box6">
-                        <span>New and classic </span>
-                        <h3>movies</h3>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="box5one">
-                <div class="img3 prop">
-                    <div class="box6">
-                        <span>Groundbreaking</span>
-                        <h3> Hulu Originals</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div class="box5one">
-                <div class="img4 prop">
-                    <div class="box6">
-                        <span>Add-on</span>
-                        <h3>Premiums</h3>
-                    </div>
-                </div>
-            </div>
         </div>
-        <div class="premi">
+        <!-- <div class="premi">
             <small>Premium network add-ons available for an additional cost</small>
-        </div>
+        </div> -->
 
         <div class="box7">
             <div class="box8">
@@ -148,4 +148,5 @@
         </div>
     </section>
 </body>
+
 </html>
