the card and the next section is noe responsive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a2ee455db1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -69,83 +72,67 @@
             <h2>All The TV You Love</h2>
             <p>
                 Watch full seasons of exclusive streaming series, current-season
-                episodes, hit movies, Hulu Originals, <br />
+                episodes, hit movies, Hulu Originals,
                 kids shows, and more.
             </p>
         </div>
-        <div class="card__container">
-            <div class="card one">
-                <div class="card__text">
-                    <small>past & current seasons</small>
-                    <p>TV Shows</p>
+            <div class="card__container">
+                <div class="card one">
+                    <div class="card__text">
+                        <small>past & current seasons</small>
+                        <p>TV Shows</p>
+                    </div>
+                    <img src="/images/tvshows1.png" alt="" width="100%" height="100%">
                 </div>
-                <img src="/images/tvshows1.png" alt="" width="100%" height="100%">
-            </div>
-            <div class="card two">
-                <div class="card__text">
-                    <small>New & classic </small>
-                    <p>Movies</p>
+                <div class="card two">
+                    <div class="card__text">
+                        <small>New & classic </small>
+                        <p>Movies</p>
+                    </div>
+                    <img src="/images/movies2.png" alt="" width="100%" height="100%">
                 </div>
-                <img src="/images/movies2.png" alt="" width="100%" height="100%">
-            </div>
-            <div class="card three">
-                <div class="card__text">
-                    <small>Groundbreaking </small>
-                    <p> Hulu Originals</p>
+                <div class="card three">
+                    <div class="card__text">
+                        <small>Groundbreaking </small>
+                        <p> Hulu Originals</p>
+                    </div>
+                    <img src="/images/huluoriginal2.png" alt="" width="100%" height="100%">
                 </div>
-                <img src="/images/huluoriginal2.png" alt="" width="100%" height="100%">
-            </div>
-            <div class="card four">
-                <div class="card__text">
-                    <small>Add-on </small>
-                    <p>Premiums</p>
+                <div class="card four">
+                    <div class="card__text">
+                        <small>Add-on </small>
+                        <p>Premiums</p>
+                    </div>
+                    <img src="/images/addonpremiums1.png" alt="" width="100%" height="100%">
                 </div>
-                <img src="/images/addonpremiums1.png" alt="" width="100%" height="100%">
             </div>
             <div class="premium">
                 <small>Premium network add-ons available for an additional cost</small>
             </div>
-
         </div>
-        <!-- <div class="premi">
-            <small>Premium network add-ons available for an additional cost</small>
-        </div> -->
-
         <div class="box7">
-            <div class="box8">
-                <div class="hulu_liveTV">
-                    HULU + LIVE TV, NOW WITH DISNEY+ AND ESPN+, ALL WITH ADS
-                </div>
-                <h2>Live TV Makes It Better</h2>
-                <h3>
-                    <p>
-                        Get 90+ top channels on Hulu (With Ads) + Live TV with your
-                        favorite live sports, news,<br />
-                        and events - plus the entire Hulu streaming library. With
-                        Unlimited DVR, store Live TV <br />
-                        recordings for up to nine months and fast-forward through your DVR
-                        content. Access <br />
-                        endless entertainment with Disney+ and live sports with ESPN+.
-                    </p>
-                    <span>For a limited time, get Hulu + Live TV for $49.99/month for 3
-                        months.*</span>
-                    <button type="button">Get HULU + Live TV</button>
-                </h3>
-            </div>
-
-            <div class="box9">
-                <p>
-                    *Hulu (With Ads) + Live TV plan only. $49.99/mo for 3 mos, then
-                    $76.99/mo (or then-current regular monthly price). Ends 10/11/23.
-                    Eligibility restrictions and terms apply. Regional restrictions,
-                    blackouts and Live TV terms apply. Access content from each service
-                    separately. Location data required to watch certain content.
-                    Unlimited DVR recording is not available for on-demand shows.
-                    <button type="button" class="see_details">See details.</button>
-                </p>
-                <button type="button">VIEW CHANNELS IN YOUR AREA →</button>
-            </div>
+            <p class="hulu_liveTV">
+                HULU + LIVE TV, NOW WITH DISNEY+ AND ESPN+, ALL WITH ADS
+            </p>
+            <h2>Live TV Makes It Better</h2>
+        <div class="get__channels">
+            <p>
+                Get 90+ top channels on Hulu (With Ads) + Live TV with your
+                favorite live sports, news,
+                and events - plus the entire Hulu streaming library. With
+                Unlimited DVR, store Live TV 
+                recordings for up to nine months and fast-forward through your DVR
+                content. Access 
+                endless entertainment with Disney+ and live sports with ESPN+.
+            </p>
+            <button type="button" class="get__hulu">Get HULU + Live TV</button>
         </div>
+        <p class="live__tv__only">
+            Hulu (With Ads) + Live TV plan only. $76.99/mo (or then-current, regular monthly price). Regional restrictions, blackouts and Live TV terms apply. Access content from each service separately. Location data required to watch certain content. Unlimited DVR recording is not available for on-demand shows.<button type="button" class="see_details">See details.</button>
+            </p>
+            <button type="button" class="view__channel">VIEW CHANNELS IN YOUR AREA →</button>
+        </div>
+        
     </section>
 </body>
 
