--- a/index.html
+++ b/index.html
@@ -77,34 +77,34 @@
             </p>
         </div>
             <div class="card__container">
-                
+
                 <div class="card one">
                     <div class="card__text">
                         <small>past & current seasons</small>
                         <p>TV Shows</p>
                     </div>
-                    <img src="/images/tvshows1.png" alt="" width="100%" height="100%">
+                    <img src="images/tvshows1.png" alt="" width="100%" height="100%">
                 </div>
                 <div class="card two">
                     <div class="card__text">
                         <small>New & classic </small>
                         <p>Movies</p>
                     </div>
-                    <img src="/images/movies2.png" alt="" width="100%" height="100%">
+                    <img src="images/movies2.png" alt="" width="100%" height="100%">
                 </div>
                 <div class="card three">
                     <div class="card__text">
                         <small>Groundbreaking </small>
                         <p> Hulu Originals</p>
                     </div>
-                    <img src="/images/huluoriginal2.png" alt="" width="100%" height="100%">
+                    <img src="images/huluoriginal2.png" alt="" width="100%" height="100%">
                 </div>
                 <div class="card four">
                     <div class="card__text">
                         <small>Add-on </small>
                         <p>Premiums</p>
                     </div>
-                    <img src="/images/addonpremiums1.png" alt="" width="100%" height="100%">
+                    <img src="images/addonpremiums1.png" alt="" width="100%" height="100%">
                 </div>
             </div>
             <div class="premium">
