green section now responsive

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/a2ee455db1.js" crossorigin="anonymous"></script>
 </head>
 
@@ -22,9 +23,9 @@
             <div>
                 <a href="" class="login"><span>LOG IN</span></a>
                 <div class="burga1"><a href="" class="burga">
-                    <img width="30px" height="20px" src="images/handburger_2.svg" alt="">
-                </a></div>
-                
+                        <img width="30px" height="20px" src="images/handburger_2.svg" alt="">
+                    </a></div>
+
             </div>
         </nav>
         <!-- first section -->
@@ -78,90 +79,104 @@
                 kids shows, and more.
             </p>
         </div>
-            <div class="card__container">
+        <div class="card__container">
 
-                <div class="card one">
-                    <div class="card__text">
-                        <small>past & current seasons</small>
-                        <p>TV Shows</p>
-                    </div>
-                    <img src="images/tvshows1.png" alt="" width="100%" height="100%">
+            <div class="card one">
+                <div class="card__text">
+                    <small>past & current seasons</small>
+                    <p>TV Shows</p>
                 </div>
-                <div class="card two">
-                    <div class="card__text">
-                        <small>New & classic </small>
-                        <p>Movies</p>
-                    </div>
-                    <img src="images/movies2.png" alt="" width="100%" height="100%">
-                </div>
-                <div class="card three">
-                    <div class="card__text">
-                        <small>Groundbreaking </small>
-                        <p> Hulu Originals</p>
-                    </div>
-                    <img src="images/huluoriginal2.png" alt="" width="100%" height="100%">
-                </div>
-                <div class="card four">
-                    <div class="card__text">
-                        <small>Add-on </small>
-                        <p>Premiums</p>
-                    </div>
-                    <img src="images/addonpremiums1.png" alt="" width="100%" height="100%">
-                </div>
+                <img src="images/tvshows1.png" alt="" width="100%" height="100%">
             </div>
-            <div class="premium">
-                <small>Premium network add-ons available for an additional cost</small>
+            <div class="card two">
+                <div class="card__text">
+                    <small>New & classic </small>
+                    <p>Movies</p>
+                </div>
+                <img src="images/movies2.png" alt="" width="100%" height="100%">
             </div>
+            <div class="card three">
+                <div class="card__text">
+                    <small>Groundbreaking </small>
+                    <p> Hulu Originals</p>
+                </div>
+                <img src="images/huluoriginal2.png" alt="" width="100%" height="100%">
+            </div>
+            <div class="card four">
+                <div class="card__text">
+                    <small>Add-on </small>
+                    <p>Premiums</p>
+                </div>
+                <img src="images/addonpremiums1.png" alt="" width="100%" height="100%">
+            </div>
+        </div>
+        <div class="premium">
+            <small>Premium network add-ons available for an additional cost</small>
+        </div>
         </div>
         <div class="box7">
             <p class="hulu_liveTV">
                 HULU + LIVE TV, NOW WITH DISNEY+ AND ESPN+, ALL WITH ADS
             </p>
             <h2>Live TV Makes It Better</h2>
-        <div class="get__channels">
-            <p>
-                Get 90+ top channels on Hulu (With Ads) + Live TV with your
-                favorite live sports, news,
-                and events - plus the entire Hulu streaming library. With
-                Unlimited DVR, store Live TV 
-                recordings for up to nine months and fast-forward through your DVR
-                content. Access 
-                endless entertainment with Disney+ and live sports with ESPN+.
-            </p>
-            <button type="button" class="get__hulu">Get HULU + Live TV</button>
-        </div>
-        <p class="live__tv__only">
-            Hulu (With Ads) + Live TV plan only. $76.99/mo (or then-current, regular monthly price). Regional restrictions, blackouts and Live TV terms apply. Access content from each service separately. Location data required to watch certain content. Unlimited DVR recording is not available for on-demand shows.<button type="button" class="see_details">See details.</button>
+            <div class="get__channels">
+                <p>
+                    Get 90+ top channels on Hulu (With Ads) + Live TV with your
+                    favorite live sports, news,
+                    and events - plus the entire Hulu streaming library. With
+                    Unlimited DVR, store Live TV
+                    recordings for up to nine months and fast-forward through your DVR
+                    content. Access
+                    endless entertainment with Disney+ and live sports with ESPN+.
+                </p>
+                <button type="button" class="get__hulu">Get HULU + Live TV</button>
+            </div>
+            <p class="live__tv__only">
+                Hulu (With Ads) + Live TV plan only. $76.99/mo (or then-current, regular monthly price). Regional
+                restrictions, blackouts and Live TV terms apply. Access content from each service separately. Location
+                data required to watch certain content. Unlimited DVR recording is not available for on-demand
+                shows.<button type="button" class="see_details">See details.</button>
             </p>
             <button type="button" class="view__channel">VIEW CHANNELS IN YOUR AREA →</button>
-        </div>  
+        </div>
     </section>
 
-    <!-- section with green color -->   
-   <div class="sport__wrapper">
-      <div class="sport__content">
-        <div class="sport__details">
-            <nav>
-                <ul>
-                    <li class="firstchild"><a href="#">LIVE SPORTS</a></li>
-                    <li><a class="secondchild" href="#">BREAKING NEWS</a></li>
-                    <li><a class="thirdchild" href="#">BIGGEST EVENTS</a></li>
-                </ul>
-             </nav>
-             <h2>Live Sports</h2>
-             <p class="sport__text">Catch your games at home or on the go. Stream live games from major college and pro leagues including the NCAA®, NBA, NHL, NFL, and more. Includes top local and national sports networks like ABC, CBS Sports Network, ESPN, FOX, FS1, TNT, NFL Network and more.</p>
-             <div class="sport__icons">
-                <div class="icon"><img src="https://cnbl-cdn.bamgrid.com/assets/13aa152764ceb4047c7f902524efb09c2a56e75c95991d2eb708b97cb95c25fa/original" alt="" width="40px" height="30px" ></div>
-                <div class="icon"><img src="https://cnbl-cdn.bamgrid.com/assets/22943c5e9e0ee02501daa440ecbc2384e5e5255b6306a4100bb49bde19b1d6ca/original" alt="" width="40px" height="30px" ></div>
-                <div class="icon"><img src="https://cnbl-cdn.bamgrid.com/assets/1011985ada97696d9ac50c3ba59cfa50d0cebb41008519c5bbe0058f9c7fc079/original" alt="" width="40px" height="30px"></div>
-                <div class="icon"><img src="https://cnbl-cdn.bamgrid.com/assets/1caca943330869aaf05bf9db4adfc269ac8879fe9cee6392eba96561522d0452/original" alt="" width="40px" height="30px"></div>
-             </div>
-             <p class="tv__plan" >Live TV plan required.Regional restrictions,blackouts and additional terms applies. <a href="#">See details</a></p>
+    <!-- section with green color -->
+    <div class="sport__wrapper">
+        <div class="sport__content">
+            <div class="sport__details">
+                <nav>
+                    <ul>
+                        <li class="firstchild"><a href="#">LIVE SPORTS</a></li>
+                        <li><a class="secondchild" href="#">BREAKING NEWS</a></li>
+                        <li><a class="thirdchild" href="#">BIGGEST EVENTS</a></li>
+                    </ul>
+                </nav>
+                <h2>Live Sports</h2>
+                <p class="sport__text">Catch your games at home or on the go. Stream live games from major college and
+                    pro leagues including the NCAA®, NBA, NHL, NFL, and more. Includes top local and national sports
+                    networks like ABC, CBS Sports Network, ESPN, FOX, FS1, TNT, NFL Network and more.</p>
+                <div class="sport__icons">
+                    <div class="icon"><img
+                            src="https://cnbl-cdn.bamgrid.com/assets/13aa152764ceb4047c7f902524efb09c2a56e75c95991d2eb708b97cb95c25fa/original"
+                            alt="" width="40px" height="30px"></div>
+                    <div class="icon"><img
+                            src="https://cnbl-cdn.bamgrid.com/assets/22943c5e9e0ee02501daa440ecbc2384e5e5255b6306a4100bb49bde19b1d6ca/original"
+                            alt="" width="40px" height="30px"></div>
+                    <div class="icon"><img
+                            src="https://cnbl-cdn.bamgrid.com/assets/1011985ada97696d9ac50c3ba59cfa50d0cebb41008519c5bbe0058f9c7fc079/original"
+                            alt="" width="40px" height="30px"></div>
+                    <div class="icon"><img
+                            src="https://cnbl-cdn.bamgrid.com/assets/1caca943330869aaf05bf9db4adfc269ac8879fe9cee6392eba96561522d0452/original"
+                            alt="" width="40px" height="30px"></div>
+                </div>
+                <p class="tv__plan">Live TV plan required.Regional restrictions,blackouts and additional terms applies.
+                    <a href="#">See details</a></p>
+            </div>
         </div>
-      </div>
-   </div>
+    </div>
 
-   <section class="fouthsec">
+    <!-- <section class="fouthsec">
     <div class="middiv3">
         <div class="Select_plan">
             <h2>Select Your Plan</h2>
@@ -260,7 +275,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 </body>
 
 </html>
