--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,7 +54,6 @@
                 </div>
             </div>
             <div class="signup">
-
                 <button class="terms_apply">Terms apply</button>
                 <div><a href="" title="Sign up for Hulu only">SIGN UP FOR HULU ONLY</a></div>
                 <div class="view_more_plan">
@@ -176,7 +174,7 @@
         </div>
     </div>
 
-    <!-- <section class="fouthsec">
+    <section class="fouthsec">
     <div class="middiv3">
         <div class="Select_plan">
             <h2>Select Your Plan</h2>
@@ -202,20 +200,21 @@
                     <img src="https://www.hulu.com/static/hitch/static/logos/bundles-dark.svg" alt="">
                 </div>
             </div>
-
             <div class="free_trial_with_adds">
-                <div>
-                <div><span>MOST POPULAR</span></div>
-                <div>30 DAY FREE TRIAL</div>
-                <div>Hulu (With Ads)</div>
-                <button class="monthly_sub">$7.99/ Month</button>
+                <div class="with__adds">
+                <div class="first"><span>MOST POPULAR</span></div>
+                <div class="second">30 DAY FREE TRIAL</div>
+                <div class="third">Hulu (With Ads)</div>
+                <button class="monthly_sub">$7.99/ MONTH</button>
                 </div>
-                <div  class="free_trial_no_adds">
-                    <div>30 DAY FREE TRIAL</div>
-                    <div>Hulu (No Ads)</div>
-                    <button  class="monthly_sub">$14.99/ Month</button>
+                <div class="free_trial_no_adds">
+                    <div class="no__adds">
+                        <div class="second">30 DAY FREE TRIAL</div>
+                        <div class="third">Hulu (No Ads)</div>
+                        <button  class="monthly_sub">$14.99/ MONTH</button>
+                    </div>
                 </div>
-            </div>
+        </div>
         
         </div>
         <div class="middiv4">
@@ -275,7 +274,7 @@
             </div>
         </div>
     </div>
-</section> -->
+</section> 
 </body>
 
 </html>
