--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <nav class="nav2">
             <div><img src="images/hulu-logo.svg" alt="" /></div>
             <div>
-                <a href="" class="login"><span>LOG IN</span></a>
+                <a href="login.html" class="login"><span>LOG IN</span></a>
                 <div class="burga1"><a href="" class="burga">
                         <img width="30px" height="20px" src="images/handburger_2.svg" alt="">
                     </a></div>
