--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
         <div class="account">
             <div class="form">
                 <form action="#">
-                    <h1 class="logi">log in</h1>
+                    <h1 class="logi">LOG IN</h1>
                     <div class="form__text">
                         You will use this email and password to log into your accounts for all your favorite services across The Walt Disney Family of Companies, including Disney+, Hulu and ESPN+. . <a href="#"
                             style="text-decoration: none;color: #176EE1;">Learn More</a>
@@ -47,7 +47,7 @@
                         </div>
                         <div class="forget__password"><a href="">Forgot your email or password?</a></div>
                         <div class="button__wrapper">
-                            <button class="button">log in
+                            <button class="button">LOG IN
                             </button>
                         </div>
                     </div>   
